--- a/lab-3-2-autoencoders.ipynb
+++ b/lab-3-2-autoencoders.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# UofT FASE ML Bootcamp\n",
-    "#### \n",
+    "#### Wednesday, August 21\n",
     "#### Autoencoders - Lab 3, Day 2 \n",
     "#### Teaching team: Elias Khalil, Kyle E. C. Booth, and Alex Olson \n",
     "##### Lab author: Alexander Olson, aolson@mie.utoronto.ca\n"
@@ -40,7 +40,6 @@
     "from matplotlib import cm\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
     "%matplotlib inline"
    ]
   },
@@ -100,12 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "Xpca = train_data.data.numpy().reshape((60000,-1))\n",
-    "\n",
-    "pca = PCA(n_components = 2)\n",
-    "Xt = pca.inverse_transform(pca.fit_transform(Xpca))\n",
-    "plt.imshow(Xt.reshape((60000,28,28))[2],cmap='gray')"
+    "from sklearn.decomposition import PCA\n"
    ]
   },
   {
@@ -199,7 +193,7 @@
    "source": [
     "Now let's create an instance of our network. We also need to define a few other parameters, like the loss function and the optimizer.\n",
     "\n",
-    "For the loss function, we will be using Mean Squared Error, which we covered in the second lab. For the optimizer, let's use basic Stochastic Gradient Descent (SGD):"
+    "For the loss function, we will be using Mean Squared Error, which we covered in the second lab. For the optimizer, let's use an advanced optimizer called Adam:"
    ]
   },
   {
@@ -209,7 +203,7 @@
    "outputs": [],
    "source": [
     "autoencoder = AutoEncoder()\n",
-    "optimizer = torch.optim.RMSprop(autoencoder.parameters(), lr=0.005)\n",
+    "optimizer = torch.optim.Adam(autoencoder.parameters(), lr=0.005)\n",
     "loss_func = nn.MSELoss()"
    ]
   },
@@ -265,7 +259,7 @@
    "outputs": [],
    "source": [
     "for epoch in range(25):\n",
-    "    for step, (x, _) in tqdm(enumerate(train_loader),total=len(train_loader)):\n",
+    "    for step, (x, _) in enumerate(train_loader):\n",
     "        #----------------------------------------------------------------------------#\n",
     "        b_x = x.view(-1, 28*28)   # batch x, shape (batch, 28*28)\n",
     "        b_y = x.view(-1, 28*28)   # batch y, shape (batch, 28*28)\n",
@@ -293,13 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third image in the column is our Autoencoder's recovered version of the number 4 we looked at with PCA. How does it look? Could it be better?\n",
-    "\n",
-    "**Your Turn**\n",
-    "\n",
-    "* Modify the Autoencoder to improve its loss. You should be able to get a loss reasonably below 0.04. Think about trying a better optimizer, changing the learning rate, or revising the structure of the encoder and decoder. Play around!\n",
-    "\n",
-    "* Report your best loss here: ______"
+    "The third image in the column is our Autoencoder's recovered version of the number 4 we looked at with PCA. How does it look? Could it be better?"
    ]
   },
   {
@@ -375,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
